done for Monday night

--- a/index.html
+++ b/index.html
@@ -43,21 +43,15 @@
     </div>
 
     <div class="row">
-        <div class="col-5" style="text-align: center;">
-            <img src="./assets/images/characters/Wicket-Warrick.png" class="player_icon" alt="">
-            <div class="character_name">
-                Ewok
-            </div>
-            <div class="character_hp">
-                150
-            </div>
+        <div class="col-2"></div>
+        <div id="playerCard" class="col-2" style="text-align: center;">
         </div>
-        <div class="col-2" style="text-align: center;">
+        <div class="col-4" style="text-align: center;">
             <button>ATTACK</button>
         </div>
-        <div class="col-5" style="text-align: center;">
-            <img src="./assets/images/characters/Wicket-Warrick.png" class="player_icon" alt="">
+        <div id="defenderCard" class="col-2" style="text-align: center;">
         </div>
+        <div class="col-2"></div>
     </div>
     
 </div>
