Everthing is working quite nicely.  Copy to master.

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
 <div class="container-fluid" style="width: 100%;">
     <div class="row">
         <div class="col-12" style="text-align: center;">
-            <h1>Star Wars RPG</h1>
+            <h1 >Star Wars RPG</h1>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-4" style="text-align: center;">
-            <h1>Available Characters</h1>
+        <div class="col-5 my-auto" style="text-align: left;">
+            <h2 id="message1"></h2>
+            <h3 id="message2"></h3>
         </div>
-        <div class="col-8 d-flex justify-content-around" style="text-align: center;" id="card_deck">
+        <div class="col-7 d-flex justify-content-around" style="text-align: center;" id="card_deck">
         </div>
 
     </div>
@@ -47,7 +48,7 @@
         <div id="playerCard" class="col-2" style="text-align: center;">
         </div>
         <div class="col-4" style="text-align: center;">
-            <button>ATTACK</button>
+            <button id="attackButton">ATTACK</button>
         </div>
         <div id="defenderCard" class="col-2" style="text-align: center;">
         </div>
